# BingWall

./: .env.example  .gitignore  CHANGELOG.md  Makefile  PROJECT_STATE.md  README.md  package-lock.json  package.json  pyproject.toml  requirements.lock.txt
.github/workflows/: auto-create-pr.yml  ci.yml  verify-deploy.yml
app/: __init__.py  main.py
app/api/: errors.py  health.py  router.py
app/collectors/: __init__.py  bing.py  manual_tasks.py  nasa_apod.py
app/core/: config.py  logging.py  security.py
app/domain/: __init__.py  collection.py  collection_sources.py  resource_variants.py
app/models/: __init__.py
app/repositories/: __init__.py  admin_auth_repository.py  admin_collection_repository.py  admin_content_repository.py  collection_repository.py  collection_repository_models.py  collection_repository_resources.py  collection_repository_tasks.py  collection_repository_wallpapers.py  download_repository.py  file_storage.py  health_repository.py  public_repository.py  sqlite.py
docs/: README.md  TODO.md  api-conventions.md  benchmark-report.md  data-model.md  deployment-runbook.md  development-roadmap.md  frontend-build-boundary.md  h4-cron-first-run-record-2026-04-04.md  module-overview.md  operations-record-templates.md  password-hash-migration.md  remediation-checklist.md  setup-troubleshooting.md  system-design.md
scripts/: benchmark_public_queries.py  create_scheduled_collection_tasks.py  install_cron.py  run_backup.py  run_resource_inspection.py  run_restore.py  run_wallpaper_archive.py  verify_t1_6.py  verify_t2_5.py
tests/: conftest.py
(+96 files in other folders)
